Added a way to update someone to specific roles
